Fixed line name and destination alignment on arrival cards

--- a/tfl_arrivals/static/content/site.css
+++ b/tfl_arrivals/static/content/site.css
@@ -145,8 +145,10 @@ div.card-content-bottom {
 
 }
 
-.arrival-line {
-  text-alig: left;
+.arrival-line,
+.arrival-towards
+{
+  text-align: left;
   /* width: 35% */
 }
 
